--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,3 +2,7 @@ server:
   port: 8188
   servlet:
     context-path: /registration-service
+database:
+  url: jdbc:postgresql://192.168.99.100:5434/postgres
+  user: postgres
+  password: postgres
